metadata/objects/Sample_Child__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sample Children</relationshipLabel>
        <relationshipName>Sample_Children</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Checkbox_15__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox_15</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checkbox_37__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox_37</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checkbox_59__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox_59</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency_25__c</fullName>
        <label>Currency_25</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currency_30__c</fullName>
        <label>Currency_30</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currency_36__c</fullName>
        <label>Currency_36</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DateTime_14__c</fullName>
        <label>DateTime_14</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateTime_43__c</fullName>
        <label>DateTime_43</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateTime_56__c</fullName>
        <label>DateTime_56</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_1__c</fullName>
        <label>Date_1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_21__c</fullName>
        <label>Date_21</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_31__c</fullName>
        <label>Date_31</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_23__c</fullName>
        <label>Email_23</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_26__c</fullName>
        <label>Email_26</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_32__c</fullName>
        <label>Email_32</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MultiSelect_19__c</fullName>
        <label>MultiSelect_19</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MultiSelect_22__c</fullName>
        <label>MultiSelect_22</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MultiSelect_27__c</fullName>
        <label>MultiSelect_27</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_10__c</fullName>
        <label>Number_10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_16__c</fullName>
        <label>Number_16</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_28__c</fullName>
        <label>Number_28</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_2__c</fullName>
        <label>Percent_2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_34__c</fullName>
        <label>Percent_34</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_41__c</fullName>
        <label>Percent_41</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phone_29__c</fullName>
        <label>Phone_29</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_45__c</fullName>
        <label>Phone_45</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_70__c</fullName>
        <label>Phone_70</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Picklist_0__c</fullName>
        <label>Picklist_0</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_39__c</fullName>
        <label>Picklist_39</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_3__c</fullName>
        <label>Picklist_3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sample_Parent__c</fullName>
        <label>Sample Parent</label>
        <referenceTo>Sample_Parent__c</referenceTo>
        <relationshipLabel>Sample Children</relationshipLabel>
        <relationshipName>Sample_Children</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TextArea_13__c</fullName>
        <label>TextArea_13</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TextArea_17__c</fullName>
        <label>TextArea_17</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TextArea_46__c</fullName>
        <label>TextArea_46</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Text_20__c</fullName>
        <label>Text_20</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_24__c</fullName>
        <label>Text_24</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_38__c</fullName>
        <label>Text_38</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sample Child</label>
    <nameField>
        <displayFormat>SC-{000000}</displayFormat>
        <label>Sample Child Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Children</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>